# node-dump-syms

./: .gitignore  Cargo.toml  README.md  index.js  index.ts  package-lock.json  package.json  tsconfig.json  vitest.config.ts
.github/workflows/: neon.yml
spec/: bin.spec.ts  dump-syms.spec.ts  dump.spec.ts
spec/support/: jasmine.json  platform-spec.ts
spec/support/linux/: my-ubuntu-crasher
spec/test_data/macOS/: addon.node  addon.node.sym
spec/test_data/windows/: Makefile  basic.cpp
src/: action.rs  dump-syms.ts  dump.ts  lib.rs
